---------------------------------------------------------------------------
Version 5.8.6  [V5-stable] 2011-??-??
- bugfix: $OMFileFlushInterval period was doubled - now using correct value
- bugfix: ActionQueue could malfunction due to index error
  Thanks to Vlad Grigorescu for the patch
- bugfix: $ActionExecOnlyOnce interval did not work properly
  Thanks to Tomas Heinrich for the patch
- bugfix: race condition when extracting program name, APPNAME, structured
  data and PROCID (RFC5424 fields) could lead to invalid characters e.g.
  in dynamic file names or during forwarding (general malfunction of these
  fields in templates, mostly under heavy load)
- bugfix: imuxsock did no longer ignore message-provided timestamp, if
  so configured (the *default*). Lead to no longer sub-second timestamps.
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=281
- bugfix: omfile returns fatal error code for things that go really wrong
  previously, RS_RET_RESUME was returned, which lead to a loop inside the
  rule engine as omfile could not really recover.
- bugfix: imfile did invalid system call under some circumstances
  when a file that was to be monitored did not exist BUT the state file
  actually existed. Mostly a cosmetic issue. Root cause was incomplete
  error checking in stream.c; so patch may affect other code areas.
- bugfix: rsyslogd -v always said 64 atomics were not present
  thanks to mono_matsuko for the patch
---------------------------------------------------------------------------
Version 5.8.5  [V5-stable] (rgerhards/al), 2011-09-01
- bugfix/security: off-by-two bug in legacy syslog parser, CVE-2011-3200
- bugfix: mark message processing did not work correctly
- bugfix: potential hang condition during tag emulation
- bugfix: too-early string termination during tag emulation
- bugfix: The NUL-Byte for the syslogtag was not copied in MsgDup (msg.c)
- bugfix: fixed incorrect state handling for Discard Action (transactions)